[PPANTT-99] feat: New filters PSP bundles' list
